# zendesk_rust_sdk

./: .gitignore  Cargo.toml  readme.md  run_get_groups.sh  run_get_organizations.sh  run_get_tickets.sh  run_get_tickets_count.sh  run_list_groups.sh  run_list_organizations.sh  run_search_tickets.sh
src/: client.rs  ex_init.rs  lib.rs  main.rs
src/entities/: group.rs  mod.rs  organization.rs  ticket.rs
