[package]
name = "zendesk_rsdk"
version = "0.1.0"
edition = "2021"
authors = [ "Marius Ileana <dxps@dxps.io>" ]
description = "A Rust SDK for Zendesk"
readme = "readme.md"
repository = "https://github.com/dxps/zendesk_rsdk"
license = "GPL 3"
keywords = [ "zendesk", "zendesk api" ]

[[bin]]
name = "ex_get_groups"
path = "src/bin/ex_get_groups.rs"

[[bin]]
name = "ex_get_organizations"
path = "src/bin/ex_get_organizations.rs"

[[bin]]
name = "ex_get_tickets"
path = "src/bin/ex_get_tickets.rs"

[[bin]]
name = "ex_get_tickets_count"
path = "src/bin/ex_get_tickets_count.rs"

[dependencies]
base64 = "0.21.2"
chrono = { version = "0.4.26", features = [ "serde" ] }
clap = { version = "3.2.25", features = ["derive"] }
dotenv = "0.15.0"
log = "0.4.19"
reqwest = { version = "0.11.18", features = [ "json" ] }
serde =  { version = "1.0.171", features = [ "derive" ] }
serde_json = "1.0.102"
tokio = { version = "1.29.1", features = [ "full" ] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
